2005-10-11  Callum McKenzie  <callum@spooky-possum.org>

	* rules/spiderette.scm: Patch from Vincent Povirk to fix the
	issues with spiderette (bug #318339). This is mostly a
	cut-and-paste job from spider. I also made the check for a
	sequence of thirteen that can go to the foundation explicit.

2005-09-28  Callum McKenzie  <callum@spooky-possum.org>

	* rules/freecell.scm: Run the hint code in a thread whenever a
	game starts or a move is made. When the user hits the hint button
	a hint is ready and waiting for them (or, if the hint code hasn't
	finished running - a rare occurrence - the best available hint is
	returned).

2005-09-24  Callum McKenzie  <callum@spooky-possum.org>

	* rules/straight_up.scm: Make sure the check-reserve always
	updates the status message. We were missing the update when the
	reserve emptied. See bug #317069.

	* rules/kansas.scm (droppable?): Stop cards being moved to the
	reserve. See bug #316737.

2005-09-20  Callum McKenzie  <callum@spooky-possum.org>

	* menu.c: Change the game-specific help shortcut to <Shift>F1 to
	avoid a conflict with the hint short-cut. <Shift>F1 is the GNOME
	short-cut for context-sensitive help. See bug #316615.

2005-09-13  Callum McKenzie  <callum@spooky-possum.org>

	* sol.c: Fall back to the default if the requested variation file
	cannot be found and supply an explanatory dialog. See bug
	#316097. We still fail if the default cannot be found.

2005-09-09  Callum McKenzie  <callum@spooky-possum.org>

	* rules/block_ten.scm: Patch from Zachary Keene to support the
	"droppable?" hint.

	* translatable_names: Rerun get_titles.pl to add gaps to the
	list.

2005-09-08  Callum McKenzie  <callum@spooky-possum.org>

	* rules/gaps.scm
	* rules/Makefile.am
	* help/C/gaps.xml
	* help/C/aisleriot.xml
	* help/C/Makefile.am
	* help/fr/gaps.xml
	* help/fr/aisleriot.xml
	* help/fr/Makefile.am: Gaps: a new game from Zachary Keene.

	* sol.scm (save-variables): Make an explicit copy when saving