@@ -259,25 +259,17 @@
 (define (add-to-sequence? row)
   (if (empty-slot? (car (vector-ref rows row)))
       (if (= 0 (modulo (car (vector-ref rows row)) 13))
-          (list 0 (string-append (_"Place a two in the leftmost slot of row ")
-                                 (number->string (+ row 1))
-                                 (_".")
-                  )
-          )
+          (list 0 (format (_ "Place a two in the leftmost slot of row ~a.")
+			  (number->string (+ row 1))))
           (if (not (= 12 (modulo (car (vector-ref rows row)) 13)))
-            (list 0 (string-append (_"Add to the sequence in row ")
-                                   (number->string (+ row 1))
-                                   (_".")
-                    )
-            )
-          )
-      )
+	      (list 0 (format (_ "Add to the sequence in row ~a.")
+			      (number->string (+ row 1))))
+	      (if (< row 3)
+		  (add-to-sequence? (+ row 1))
+		  #f)))
       (if (< row 3)
           (add-to-sequence? (+ row 1))
-          #f
-      )
-  )
-)  
+          #f)))
 
 (define (playable-gap? slotlist)
   (if (null? slotlist)
@@ -285,18 +277,12 @@
       (if (and (empty-slot? (car slotlist))
                (not (empty-slot? (- (car slotlist) 1)))
                (not (= king (get-value(get-top-card(- (car slotlist) 1)))))
-           )
-           (list 0 (string-append 
-                     (_"Place the ")
-                     (get-value-name (+ 1 (get-value(get-top-card
-                       (- (car slotlist) 1))))
-                     )
-                     (_" of ") 
-                     (get-suit-name(get-suit(get-top-card(- (car slotlist) 1))))
-                     (_" next to the ")
-                     (get-name(get-top-card(- (car slotlist) 1))) (_".")
-                   )
-           )
+	       )
+	  (let ((target-card (get-top-card (- (car slotlist) 1))))
+	    (list 0 (format
+                     (_ "Place the ~a next to ~a.")
+		     (get-name (add-to-value target-card 1))
+		     (get-name target-card))))
            (playable-gap? (cdr slotlist))
       )
   )
