@@ -1,3 +1,8 @@
+2005-10-16  Callum McKenzie  <callum@spooky-possum.org>
+
+	* games-network-dialog.c (network_game_dialog_show): Don't use
+	hard line-breaks in strings (bug #318940).
+
 2005-10-05  Callum McKenzie  <callum@spooky-possum.org>
 
 	* games-scores-backend.c: Make writing and reading the high score
