@@ -1,3 +1,8 @@
+2005-10-16  Callum McKenzie  <callum@spooky-possum.org>
+
+	* rules/gaps.scm: Replace append-string with format to make the
+	translators job easier (possible!). Bug #318938.
+
 2005-10-11  Callum McKenzie  <callum@spooky-possum.org>
 
 	* rules/spiderette.scm: Patch from Vincent Povirk to fix the
